Added in GitHub social button

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -30,6 +30,13 @@
     text-align: right;
 }
 
+.socialButtons {
+    display: block;
+    width: 45%;
+    float: right;
+    text-align: right;
+}
+
 .copyright {
     display: block;
     width: 45%;
