--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -12,6 +12,7 @@
     font-family: "Open Sans", sans-serif;
     font-size: 1rem;
     line-height: 1.75em;
+    color: #bbc7cc;
     background-color: #040404;
     vertical-align: middle;
 }
