--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -8,7 +8,7 @@
     flex-wrap: wrap;
     /*grid-template-columns: 25% 35% 15% 25%;*/
     width: 100%;
-    margin: 8rem 0 0;
+    margin: 0px;
     padding: 1rem 15px;
     font-family: "Open Sans", sans-serif;
     font-size: 1rem;
