--- a/src/components/PostListing/PostListing.module.css
+++ b/src/components/PostListing/PostListing.module.css
@@ -1,8 +1,8 @@
-.post{
-    border: 1px dotted black
+.post {
+    padding: 2rem 0rem;
 }
-.summarytext{
+
+.summarytext {
     color: black;
-    font-weight: normal;
     text-decoration: none;
 }
