Fix footer not sticking to bottom of page

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,7 +3,8 @@
    ========================================================================== */
 
 .siteFooter {
-    position: relative;
+    position: absolute;
+    bottom: 0;
     display: flex;
     flex-wrap: wrap;
     /*grid-template-columns: 25% 35% 15% 25%;*/
