--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -13,7 +13,7 @@ h1 {
   padding-top: 1em;
 }
 
-.header, .contentdiv, .footer {
+.masthead, .contentdiv, .footer {
   margin: 0 auto;
   max-width: 960px;
   padding: 1.0875rem;
