--- a/src/components/Masthead/Masthead.module.css
+++ b/src/components/Masthead/Masthead.module.css
@@ -1,16 +1,18 @@
 .wrapper {
     background-color: #3369B3;
+    min-height: 35vh;
 }
 
 .masthead h1, .masthead p {
     color: #ffffff;
-    font-family: "Roboto";
 }
 
 .masthead h1 {
-    font-weight: 300;
+    font-family: 'myriad-pro';
+    font-weight: 600;
 }
 
 .masthead p {
+    font-family: 'Roboto';
     font-weight: 400;
 }
