--- a/src/components/PostListing/PostListing.module.scss
+++ b/src/components/PostListing/PostListing.module.scss
@@ -1,8 +1,9 @@
+@import '../../styles/colors';
+
 .post {
     padding: 2rem 0rem;
 }
 
 .summarytext {
-    color: black;
-    text-decoration: none;
+    color: $color-black !important;
 }
