--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -7,3 +7,10 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 400;
 }
+
+.subtle-fonts {
+    font-family: "myriad-pro", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 1.25em;
+}
