--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -5,32 +5,11 @@
     @extend .extended-section;
     background-color: $color-white;
     border-bottom: 1px solid $color-light;
+    overflow: hidden;
 }
 
 .navBar {
     display: flex;
-}
-
-.logoContainer {
-    font-size: 1.5em;
-    height: 70px;
-    display: block;
-}
-
-.logo {
-    display: inline-block;
-    vertical-align: top;
-    transition: color 300ms ease;
-    font-family: 'myriad-pro';
-    font-weight: 600;
-}
-
-.logo, .logo:active, .logo:visited {
-    color: $color-main;
-}
-
-.logo:hover {
-    color: $color-dark;
 }
 
 .link, .link:visited, .link:active {
@@ -39,23 +18,6 @@
 
 .link:hover {
     color: $color-dark;
-}
-
-.logo > img {
-    float: left;
-    padding: 0.3rem;
-    margin: 0px;
-    max-width: 60px;
-}
-
-.logo > span {
-    float: left;
-    display: block;
-    padding: 0.8rem 0;
-}
-
-.logo {
-    margin: 0.1rem 0.3rem;
 }
 
 .navLinkContainer {
