--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -11,3 +11,8 @@ $extended-padding: 5rem;
     max-width: 1440px;
     padding: 0.3rem $extended-padding;
 }
+
+$sm-bp: 500px;
+$ms-bp: 501px;
+$me-bp: 1200px;
+$lg-bp: 1201px;
