--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -3,9 +3,12 @@ $ms-bp: 501px;
 $me-bp: 1200px;
 $lg-bp: 1201px;
 
+$max-width-sm: 960px;
+$max-width-lg: 1440px;
+
 .centered-section {
     margin: 0 auto;
-    max-width: 960px;
+    max-width: $max-width-sm;
     padding: 1.0875rem;
 }
 
@@ -14,7 +17,7 @@ $extended-padding: 5rem;
 @media only screen and (min-width: $lg-bp) {
     .extended-section {
         margin: 0 auto;
-        max-width: 1440px;
+        max-width: $max-width-lg;
         padding: 0.3rem $extended-padding;
     }
 }
@@ -22,7 +25,7 @@ $extended-padding: 5rem;
 @media only screen and (max-width: $me-bp) {
     .extended-section {
         margin: 0 auto;
-        max-width: 1440px;
+        max-width: $max-width-sm;
         padding: 1.0875rem;
     }
 }
