Use native fonts if available

--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -8,7 +8,7 @@
 .logo {
     display: inline-block;
     vertical-align: top;
-    font-family: 'myriad-pro';
+    font-family: "Myriad Pro", "myriad-pro", sans-serif;
     font-weight: 600;
     font-size: 0.4em;
 }
