--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,5 +1,5 @@
 .heading-fonts {
-    font-family: "myriad-pro", sans-serif;
+    font-family: "Myriad Pro", "myriad-pro", sans-serif;
     font-weight: 600;
 }
 
@@ -9,7 +9,7 @@
 }
 
 .subtle-fonts {
-    font-family: "myriad-pro", sans-serif;
+    font-family: "Myriad Pro", "myriad-pro", sans-serif;
     font-weight: 300;
     font-style: italic;
     font-size: 1.25em;
