--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -10,6 +10,7 @@
 
 .navBar {
     display: flex;
+    position: relative;
 }
 
 .link, .link:visited, .link:active {
@@ -31,7 +32,96 @@
     margin: 2px;
     border-radius: 3px;
     display: inline-block;
-    transition: color 300ms ease;
-    font-family: 'myriad-pro';
+    transition: color 300ms ease-in-out;
+    font-family: "Myriad Pro", "myriad-pro", sans-serif;
     font-weight: 500;
+}
+
+.menuicon {
+    cursor: pointer;
+    display: block;
+    padding: 32px 32px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    user-select: none;
+}
+
+.menuicon .navicon {
+    background: $color-main;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background 300ms ease-in-out;
+    width: 18px;
+}
+
+.menuicon .navicon:before,
+.menuicon .navicon:after {
+    background: $color-main;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all 300ms ease-in-out;
+    width: 100%;
+}
+
+.menuicon .navicon:before {
+    top: 5px;
+}
+
+.menuicon .navicon:after {
+    top: -5px;
+}
+
+.menubtn {
+    display: none;
+}
+
+.menubtn:checked ~ .menuicon .navicon {
+    background: transparent;
+}
+
+.menubtn:checked ~ .menuicon .navicon:before {
+    transform: rotate(-45deg);
+}
+
+.menubtn:checked ~ .menuicon .navicon:after {
+    transform: rotate(45deg);
+}
+
+.menubtn:checked ~ .menuicon:not(.steps) .navicon:before,
+.menubtn:checked ~ .menuicon:not(.steps) .navicon:after {
+    top: 0;
+}
+
+@media only screen and (min-width: $lg-bp) {
+    .navLinkContainer {
+        display: flex;
+    }
+    .menuicon {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: $me-bp) {
+    .navBar {
+        flex-direction: column;
+        padding-right: 84px;
+    }
+    .navLinkContainer {
+        flex-direction: column;
+        margin: 0.6rem 2rem 0.6rem 2rem;
+    }
+    .menubtn ~ .navLinkContainer {
+        max-height: 0px;
+        margin: 0px;
+        overflow: hidden;
+        transition: max-height 300ms ease-in-out;
+    }
+    .menubtn:checked ~ .navLinkContainer {
+        max-height: inherit;
+        margin: inherit;
+    }
 }
