Tweak footer padding

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -10,7 +10,7 @@
 }
 
 .footer {
-    @extend .extended-section;
+    @extend .centered-section;
     padding-top: $extended-padding;
     padding-bottom: $extended-padding;
 }
