Use native fonts as backups in case client doesn't have full typeface family

--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -9,7 +9,7 @@
 .logo {
     display: inline-block;
     vertical-align: top;
-    font-family: "Myriad Pro", "myriad-pro", sans-serif;
+    font-family: "myriad-pro", "Myriad Pro", sans-serif;
     font-weight: 600;
     font-size: 0.4em;
 }
