--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -33,7 +33,7 @@
     border-radius: 3px;
     display: inline-block;
     transition: color 300ms ease-in-out;
-    font-family: "Myriad Pro", "myriad-pro", sans-serif;
+    font-family: "myriad-pro", "Myriad Pro", sans-serif;
     font-weight: 500;
 }
 
