--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -50,7 +50,7 @@ pre[class*="language-"] {
 :not(pre) > code[class*="language-"] {
     padding: .1em;
     border-radius: .3em;
-    white-space: normal;
+    white-space: pre;
 }
 
 .token.comment,
